// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`at the largest content size, dark avatar 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#151f72",
        "borderRadius": 12,
        "height": 80,
        "width": 80,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -0.8859999999999992,
          "marginTop": -0.8859999999999992,
        },
        {
          "color": "#ffffff",
        },
        {
          "textAlign": "center",
        },
      ]
    }
  >
    KA
  </Text>
</View>
`;

exports[`at the largest content size, dark button_wrapping 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#4d88ff",
        "borderRadius": 32,
        "minHeight": 52,
        "opacity": 1,
        "paddingHorizontal": 24,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "marginBottom": -1.5839999999999996,
            "marginTop": -1.5839999999999996,
          },
          {
            "textAlign": "center",
          },
          {
            "color": "#ffffff",
            "paddingVertical": 4,
          },
        ]
      }
    >
      Continue to the ID details form
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, dark data_field_row_with_copy 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      },
      {
        "columnGap": 8,
        "minHeight": 40,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13,
          "letterSpacing": 0,
          "lineHeight": 16,
          "marginBottom": -0,
          "marginTop": -0,
        },
        {
          "color": "#848282",
        },
      ]
    }
  >
    Job_id
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-SemiBold",
          "fontSize": 13,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -1.536999999999999,
          "marginTop": -1.536999999999999,
        },
        {
          "flex": 1,
          "textAlign": "right",
        },
        {
          "color": "#f2f2f2",
        },
      ]
    }
  >
    7d2f01aa-4b1c
  </Text>
  <View
    accessibilityLabel="Copy Job_id"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={12}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#1a1c23",
          "borderRadius": 8,
          "height": 24,
          "width": 24,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={-960}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={960}
      vbWidth={960}
      width={16}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"
          fill={
            {
              "payload": 4286874242,
              "type": 0,
            }
          }
          opacity={1}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`at the largest content size, dark filter_chip 1`] = `
<View
  accessibilityRole="tab"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": false,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "minHeight": 44,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        {
          "backgroundColor": "#272a35",
          "borderColor": "#2d3748",
          "borderRadius": 999,
          "borderWidth": 0.5,
          "columnGap": 4,
          "minHeight": 32,
          "paddingHorizontal": 11.5,
          "paddingVertical": 7.5,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 12.5,
            "letterSpacing": 0,
            "lineHeight": 20,
            "marginBottom": -1.862499999999999,
            "marginTop": -1.862499999999999,
          },
          {
            "color": "#c2c5cb",
          },
        ]
      }
    >
      Attention
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 11,
            "letterSpacing": 0,
            "lineHeight": 16,
            "marginBottom": -0.8389999999999995,
            "marginTop": -0.8389999999999995,
          },
          {
            "color": "#848282",
            "letterSpacing": 0.88,
          },
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, dark job_row 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
        "width": "100%",
      },
      {
        "backgroundColor": "#272a35",
        "borderColor": "#2d3748",
        "borderRadius": 16,
        "borderWidth": 0.5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        },
        {
          "margin": -0.5,
        },
        {
          "columnGap": 12,
          "minHeight": 64,
          "padding": 12,
          "rowGap": 8,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#e4f2ea",
            "borderRadius": 10,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={18}
        bbWidth={18}
        fill="none"
        focusable={false}
        height={18}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 18,
              "width": 18,
            },
          ]
        }
        vbHeight={21}
        vbWidth={21}
        width={18}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M10.5 16.625C14.366 16.625 17.5 13.491 17.5 9.625C17.5 5.75901 14.366 2.625 10.5 2.625C6.63401 2.625 3.5 5.75901 3.5 9.625C3.5 13.491 6.63401 16.625 10.5 16.625Z"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278547002,
                "type": 0,
              }
            }
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeWidth={2.16667}
          />
          <RNSVGPath
            d="M7.875 9.625H7.88375M13.125 9.625H13.1338M7.875 12.6875C9.3625 14 11.6375 14 13.125 12.6875"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278547002,
                "type": 0,
              }
            }
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeWidth={2.16667}
          />
          <RNSVGPath
            d="M10.5 1.3125V3.9375"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278547002,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2.16667}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        [
          null,
          {
            "rowGap": 4,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginBottom": -1.5839999999999996,
              "marginTop": -1.5839999999999996,
            },
            {
              "color": "#f2f2f2",
            },
          ]
        }
      >
        SmartSelfie Enrollment
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Medium",
              "fontSize": 12,
              "letterSpacing": 0,
              "lineHeight": 16,
              "marginBottom": -0.18799999999999972,
              "marginTop": -0.18799999999999972,
            },
            {
              "color": "#848282",
            },
          ]
        }
      >
        7d2f01aa… · 13:03:41
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 11,
            "letterSpacing": 0,
            "lineHeight": 16,
            "marginBottom": 0,
            "marginTop": 0,
          },
          {
            "backgroundColor": "#dbf5e4",
            "borderRadius": 32,
            "color": "#04713a",
            "letterSpacing": 0.88,
            "overflow": "hidden",
            "paddingHorizontal": 8,
            "paddingVertical": 3.1610000000000005,
          },
          undefined,
        ]
      }
      testID="sample_job_row_status"
    >
      Clear
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, dark key_value_edit_row 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "width": "100%",
      },
      {
        "backgroundColor": "#272a35",
        "minHeight": 44,
        "paddingHorizontal": 15,
        "paddingVertical": 14,
        "rowGap": 4,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13.5,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -1.2114999999999991,
          "marginTop": -1.2114999999999991,
        },
        {
          "color": "#f2f2f2",
        },
      ]
    }
  >
    First name
  </Text>
  <TextInput
    editable={true}
    onChangeText={[Function]}
    placeholder=""
    placeholderTextColor="#848282"
    selectionColor="#4d88ff"
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13.5,
          "letterSpacing": 0,
          "lineHeight": 17.577,
          "marginBottom": 0,
          "marginTop": 0,
        },
        {
          "padding": 0,
          "textAlign": "right",
        },
        {
          "color": "#f2f2f2",
        },
      ]
    }
    value="Ada"
  />
</View>
`;

exports[`at the largest content size, dark selection_bar 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "backgroundColor": "#272a35",
        "borderTopColor": "#eaecf0",
        "borderTopWidth": 1,
      },
      undefined,
    ]
  }
  testID="sample_selection_bar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "width": "100%",
        },
        {
          "columnGap": 12,
          "paddingBottom": 34,
          "paddingHorizontal": 16,
          "paddingTop": 12,
          "rowGap": 8,
        },
      ]
    }
  >
    <View
      style={
        {
          "rowGap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Bold",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginBottom": -2.8859999999999992,
              "marginTop": -2.8859999999999992,
            },
            {
              "color": "#f2f2f2",
            },
          ]
        }
        testID="sample_selection_count"
      >
        3 selected
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Regular",
              "fontSize": 11.5,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": -2.5134999999999996,
              "marginTop": -2.5134999999999996,
            },
            {
              "color": "#848282",
            },
          ]
        }
      >
        Tap "Hide from List" to confirm
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
          {
            "backgroundColor": "#fde4e1",
            "borderRadius": 32,
            "columnGap": 8,
            "minHeight": 40,
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
        ]
      }
      testID="sample_selection_remove"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={17}
        vbWidth={17}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M2.83333,4.95833H14.1667M6.375,4.95833V3.54167C6.375,3.3538 6.44963,3.17364 6.58247,3.0408C6.7153,2.90796 6.89547,2.83333 7.08333,2.83333H9.91667C10.1045,2.83333 10.2847,2.90796 10.4175,3.0408C10.5504,3.17364 10.625,3.3538 10.625,3.54167V4.95833M4.25,4.95833L4.95833,14.1667C4.95833,14.3545 5.03296,14.5347 5.1658,14.6675C5.29864,14.8004 5.4788,14.875 5.66667,14.875H11.3333C11.5212,14.875 11.7014,14.8004 11.8342,14.6675C11.967,14.5347 12.0417,14.3545 12.0417,14.1667L12.75,4.95833"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4288745993,
                "type": 0,
              }
            }
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeWidth={1.5}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Bold",
              "fontSize": 13.5,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginBottom": -3.211499999999999,
              "marginTop": -3.211499999999999,
            },
            {
              "color": "#a11209",
            },
          ]
        }
      >
        Hide from List
      </Text>
    </View>
  </View>
</View>
`;

exports[`at the largest content size, dark toast_with_action 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "width": "100%",
      },
      {
        "elevation": 12,
        "shadowColor": "#00000026",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
      },
      {
        "backgroundColor": "#f2f2f2",
        "borderRadius": 12,
        "columnGap": 12,
        "minHeight": 46,
        "paddingHorizontal": 16,
        "paddingVertical": 13,
        "rowGap": 4,
      },
      undefined,
    ]
  }
  testID="sample_toast"
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13.5,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -1.2114999999999991,
          "marginTop": -1.2114999999999991,
        },
        {
          "flexBasis": "auto",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        {
          "color": "#1a1c23",
        },
      ]
    }
  >
    1 verification hidden from App list
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "minWidth": 44,
          "paddingHorizontal": 8,
        },
      ]
    }
    testID="sample_toast_undo"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "DMSans-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "marginBottom": -0.8859999999999992,
            "marginTop": -0.8859999999999992,
          },
          {
            "textAlign": "center",
            "textDecorationLine": "underline",
          },
          {
            "color": "#1a1c23",
          },
        ]
      }
    >
      Undo
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, dark top_app_bar_wrapping_title 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "columnGap": 8,
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "100%",
        },
        {
          "columnGap": 8,
          "minHeight": 80,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#f2f2f2",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={17}
        vbWidth={17}
        width={20}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M13.4583 8.5H3.54163M7.79163 12.75L3.54163 8.5L7.79163 4.25"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4281150250,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.5}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
            "marginBottom": -2.2349999999999994,
            "marginTop": -2.2349999999999994,
          },
          {
            "flex": 1,
            "textAlign": "center",
          },
          {
            "color": "#f2f2f2",
          },
        ]
      }
    >
      Enhanced Document Verification
    </Text>
    <View
      style={
        {
          "width": 40,
        }
      }
    />
  </View>
</View>
`;

exports[`at the largest content size, light avatar 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "justifyContent": "center",
        "overflow": "hidden",
      },
      {
        "backgroundColor": "#151f72",
        "borderRadius": 12,
        "height": 80,
        "width": 80,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 14,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -0.8859999999999992,
          "marginTop": -0.8859999999999992,
        },
        {
          "color": "#ffffff",
        },
        {
          "textAlign": "center",
        },
      ]
    }
  >
    KA
  </Text>
</View>
`;

exports[`at the largest content size, light button_wrapping 1`] = `
<View
  accessibilityRole="button"
  accessibilityState={
    {
      "busy": false,
      "checked": undefined,
      "disabled": false,
      "expanded": undefined,
      "selected": undefined,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignItems": "center",
        "alignSelf": "stretch",
        "justifyContent": "center",
      },
      {
        "backgroundColor": "#151f72",
        "borderRadius": 32,
        "minHeight": 52,
        "opacity": 1,
        "paddingHorizontal": 24,
      },
      undefined,
    ]
  }
>
  <View
    style={
      {
        "alignItems": "center",
        "justifyContent": "center",
      }
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 16,
            "letterSpacing": 0,
            "lineHeight": 24,
            "marginBottom": -1.5839999999999996,
            "marginTop": -1.5839999999999996,
          },
          {
            "textAlign": "center",
          },
          {
            "color": "#ffffff",
            "paddingVertical": 4,
          },
        ]
      }
    >
      Continue to the ID details form
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, light data_field_row_with_copy 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "width": "100%",
      },
      {
        "columnGap": 8,
        "minHeight": 40,
        "paddingHorizontal": 16,
        "paddingVertical": 12,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13,
          "letterSpacing": 0,
          "lineHeight": 16,
          "marginBottom": -0,
          "marginTop": -0,
        },
        {
          "color": "#848282",
        },
      ]
    }
  >
    Job_id
  </Text>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-SemiBold",
          "fontSize": 13,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -1.536999999999999,
          "marginTop": -1.536999999999999,
        },
        {
          "flex": 1,
          "textAlign": "right",
        },
        {
          "color": "#21232c",
        },
      ]
    }
  >
    7d2f01aa-4b1c
  </Text>
  <View
    accessibilityLabel="Copy Job_id"
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    hitSlop={12}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "backgroundColor": "#eaecf0",
          "borderRadius": 8,
          "height": 24,
          "width": 24,
        },
      ]
    }
  >
    <RNSVGSvgView
      align="xMidYMid"
      bbHeight={16}
      bbWidth={16}
      fill="none"
      focusable={false}
      height={16}
      meetOrSlice={0}
      minX={0}
      minY={-960}
      style={
        [
          {
            "backgroundColor": "transparent",
            "borderWidth": 0,
          },
          {
            "flex": 0,
            "height": 16,
            "width": 16,
          },
        ]
      }
      vbHeight={960}
      vbWidth={960}
      width={16}
    >
      <RNSVGGroup
        fill={null}
        propList={
          [
            "fill",
          ]
        }
      >
        <RNSVGPath
          d="M360-240q-33 0-56.5-23.5T280-320v-480q0-33 23.5-56.5T360-880h360q33 0 56.5 23.5T800-800v480q0 33-23.5 56.5T720-240H360Zm0-80h360v-480H360v480ZM200-80q-33 0-56.5-23.5T120-160v-560h80v560h440v80H200Zm160-240v-480 480Z"
          fill={
            {
              "payload": 4286874242,
              "type": 0,
            }
          }
          opacity={1}
          propList={
            [
              "fill",
            ]
          }
        />
      </RNSVGGroup>
    </RNSVGSvgView>
  </View>
</View>
`;

exports[`at the largest content size, light filter_chip 1`] = `
<View
  accessibilityRole="tab"
  accessibilityState={
    {
      "busy": undefined,
      "checked": undefined,
      "disabled": undefined,
      "expanded": undefined,
      "selected": false,
    }
  }
  accessibilityValue={
    {
      "max": undefined,
      "min": undefined,
      "now": undefined,
      "text": undefined,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onBlur={[Function]}
  onClick={[Function]}
  onFocus={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    [
      {
        "alignSelf": "flex-start",
        "justifyContent": "center",
      },
      {
        "minHeight": 44,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
        },
        {
          "backgroundColor": "#ffffff",
          "borderColor": "#eaecf0",
          "borderRadius": 999,
          "borderWidth": 0.5,
          "columnGap": 4,
          "minHeight": 32,
          "paddingHorizontal": 11.5,
          "paddingVertical": 7.5,
        },
      ]
    }
  >
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 12.5,
            "letterSpacing": 0,
            "lineHeight": 20,
            "marginBottom": -1.862499999999999,
            "marginTop": -1.862499999999999,
          },
          {
            "color": "#5e646e",
          },
        ]
      }
    >
      Attention
    </Text>
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 11,
            "letterSpacing": 0,
            "lineHeight": 16,
            "marginBottom": -0.8389999999999995,
            "marginTop": -0.8389999999999995,
          },
          {
            "color": "#848282",
            "letterSpacing": 0.88,
          },
        ]
      }
    >
      2
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, light job_row 1`] = `
<View
  style={
    [
      {
        "overflow": "hidden",
        "width": "100%",
      },
      {
        "backgroundColor": "#ffffff",
        "borderColor": "#eaecf0",
        "borderRadius": 16,
        "borderWidth": 0.5,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
        },
        {
          "margin": -0.5,
        },
        {
          "columnGap": 12,
          "minHeight": 64,
          "padding": 12,
          "rowGap": 8,
        },
      ]
    }
  >
    <View
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#e4f2ea",
            "borderRadius": 10,
            "height": 36,
            "width": 36,
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={18}
        bbWidth={18}
        fill="none"
        focusable={false}
        height={18}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 18,
              "width": 18,
            },
          ]
        }
        vbHeight={21}
        vbWidth={21}
        width={18}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M10.5 16.625C14.366 16.625 17.5 13.491 17.5 9.625C17.5 5.75901 14.366 2.625 10.5 2.625C6.63401 2.625 3.5 5.75901 3.5 9.625C3.5 13.491 6.63401 16.625 10.5 16.625Z"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278547002,
                "type": 0,
              }
            }
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeWidth={2.16667}
          />
          <RNSVGPath
            d="M7.875 9.625H7.88375M13.125 9.625H13.1338M7.875 12.6875C9.3625 14 11.6375 14 13.125 12.6875"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278547002,
                "type": 0,
              }
            }
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeWidth={2.16667}
          />
          <RNSVGPath
            d="M10.5 1.3125V3.9375"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4278547002,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={2.16667}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <View
      style={
        [
          null,
          {
            "rowGap": 4,
          },
        ]
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-SemiBold",
              "fontSize": 16,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginBottom": -1.5839999999999996,
              "marginTop": -1.5839999999999996,
            },
            {
              "color": "#21232c",
            },
          ]
        }
      >
        SmartSelfie Enrollment
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Medium",
              "fontSize": 12,
              "letterSpacing": 0,
              "lineHeight": 16,
              "marginBottom": -0.18799999999999972,
              "marginTop": -0.18799999999999972,
            },
            {
              "color": "#848282",
            },
          ]
        }
      >
        7d2f01aa… · 13:03:41
      </Text>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 11,
            "letterSpacing": 0,
            "lineHeight": 16,
            "marginBottom": 0,
            "marginTop": 0,
          },
          {
            "backgroundColor": "#dbf5e4",
            "borderRadius": 32,
            "color": "#04713a",
            "letterSpacing": 0.88,
            "overflow": "hidden",
            "paddingHorizontal": 8,
            "paddingVertical": 3.1610000000000005,
          },
          undefined,
        ]
      }
      testID="sample_job_row_status"
    >
      Clear
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, light key_value_edit_row 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "justifyContent": "space-between",
        "width": "100%",
      },
      {
        "backgroundColor": "#ffffff",
        "minHeight": 44,
        "paddingHorizontal": 15,
        "paddingVertical": 14,
        "rowGap": 4,
      },
      undefined,
    ]
  }
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13.5,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -1.2114999999999991,
          "marginTop": -1.2114999999999991,
        },
        {
          "color": "#21232c",
        },
      ]
    }
  >
    First name
  </Text>
  <TextInput
    editable={true}
    onChangeText={[Function]}
    placeholder=""
    placeholderTextColor="#848282"
    selectionColor="#151f72"
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13.5,
          "letterSpacing": 0,
          "lineHeight": 17.577,
          "marginBottom": 0,
          "marginTop": 0,
        },
        {
          "padding": 0,
          "textAlign": "right",
        },
        {
          "color": "#21232c",
        },
      ]
    }
    value="Ada"
  />
</View>
`;

exports[`at the largest content size, light selection_bar 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "backgroundColor": "#ffffff",
        "borderTopColor": "#eaecf0",
        "borderTopWidth": 1,
      },
      undefined,
    ]
  }
  testID="sample_selection_bar"
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "flexWrap": "wrap",
          "justifyContent": "space-between",
          "width": "100%",
        },
        {
          "columnGap": 12,
          "paddingBottom": 34,
          "paddingHorizontal": 16,
          "paddingTop": 12,
          "rowGap": 8,
        },
      ]
    }
  >
    <View
      style={
        {
          "rowGap": 4,
        }
      }
    >
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Bold",
              "fontSize": 14,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginBottom": -2.8859999999999992,
              "marginTop": -2.8859999999999992,
            },
            {
              "color": "#21232c",
            },
          ]
        }
        testID="sample_selection_count"
      >
        3 selected
      </Text>
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Regular",
              "fontSize": 11.5,
              "letterSpacing": 0,
              "lineHeight": 20,
              "marginBottom": -2.5134999999999996,
              "marginTop": -2.5134999999999996,
            },
            {
              "color": "#848282",
            },
          ]
        }
      >
        Tap "Hide from List" to confirm
      </Text>
    </View>
    <View
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": false,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "flexDirection": "row",
          },
          {
            "backgroundColor": "#fde4e1",
            "borderRadius": 32,
            "columnGap": 8,
            "minHeight": 40,
            "opacity": 1,
            "paddingHorizontal": 16,
            "paddingVertical": 8,
          },
        ]
      }
      testID="sample_selection_remove"
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={16}
        bbWidth={16}
        fill="none"
        focusable={false}
        height={16}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 16,
              "width": 16,
            },
          ]
        }
        vbHeight={17}
        vbWidth={17}
        width={16}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M2.83333,4.95833H14.1667M6.375,4.95833V3.54167C6.375,3.3538 6.44963,3.17364 6.58247,3.0408C6.7153,2.90796 6.89547,2.83333 7.08333,2.83333H9.91667C10.1045,2.83333 10.2847,2.90796 10.4175,3.0408C10.5504,3.17364 10.625,3.3538 10.625,3.54167V4.95833M4.25,4.95833L4.95833,14.1667C4.95833,14.3545 5.03296,14.5347 5.1658,14.6675C5.29864,14.8004 5.4788,14.875 5.66667,14.875H11.3333C11.5212,14.875 11.7014,14.8004 11.8342,14.6675C11.967,14.5347 12.0417,14.3545 12.0417,14.1667L12.75,4.95833"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4288745993,
                "type": 0,
              }
            }
            strokeLinecap={0}
            strokeLinejoin={0}
            strokeWidth={1.5}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
      <Text
        style={
          [
            {
              "fontFamily": "DMSans-Bold",
              "fontSize": 13.5,
              "letterSpacing": 0,
              "lineHeight": 24,
              "marginBottom": -3.211499999999999,
              "marginTop": -3.211499999999999,
            },
            {
              "color": "#a11209",
            },
          ]
        }
      >
        Hide from List
      </Text>
    </View>
  </View>
</View>
`;

exports[`at the largest content size, light toast_with_action 1`] = `
<View
  style={
    [
      {
        "alignItems": "center",
        "flexDirection": "row",
        "flexWrap": "wrap",
        "width": "100%",
      },
      {
        "elevation": 12,
        "shadowColor": "#00000026",
        "shadowOffset": {
          "height": 4,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 12,
      },
      {
        "backgroundColor": "#21232c",
        "borderRadius": 12,
        "columnGap": 12,
        "minHeight": 46,
        "paddingHorizontal": 16,
        "paddingVertical": 13,
        "rowGap": 4,
      },
      undefined,
    ]
  }
  testID="sample_toast"
>
  <Text
    style={
      [
        {
          "fontFamily": "DMSans-Medium",
          "fontSize": 13.5,
          "letterSpacing": 0,
          "lineHeight": 20,
          "marginBottom": -1.2114999999999991,
          "marginTop": -1.2114999999999991,
        },
        {
          "flexBasis": "auto",
          "flexGrow": 1,
          "flexShrink": 1,
        },
        {
          "color": "#f9fafb",
        },
      ]
    }
  >
    1 verification hidden from App list
  </Text>
  <View
    accessibilityRole="button"
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": undefined,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "alignItems": "center",
          "justifyContent": "center",
        },
        {
          "minWidth": 44,
          "paddingHorizontal": 8,
        },
      ]
    }
    testID="sample_toast_undo"
  >
    <Text
      numberOfLines={1}
      style={
        [
          {
            "fontFamily": "DMSans-SemiBold",
            "fontSize": 14,
            "letterSpacing": 0,
            "lineHeight": 20,
            "marginBottom": -0.8859999999999992,
            "marginTop": -0.8859999999999992,
          },
          {
            "textAlign": "center",
            "textDecorationLine": "underline",
          },
          {
            "color": "#f9fafb",
          },
        ]
      }
    >
      Undo
    </Text>
  </View>
</View>
`;

exports[`at the largest content size, light top_app_bar_wrapping_title 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {
        "columnGap": 8,
        "paddingBottom": 8,
        "paddingHorizontal": 16,
        "paddingTop": 44,
      },
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "alignItems": "center",
          "flexDirection": "row",
          "width": "100%",
        },
        {
          "columnGap": 8,
          "minHeight": 80,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Back"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      hitSlop={8}
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        [
          {
            "alignItems": "center",
            "justifyContent": "center",
          },
          {
            "backgroundColor": "#21232c",
            "borderRadius": 20,
            "height": 40,
            "width": 40,
          },
        ]
      }
    >
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={20}
        bbWidth={20}
        fill="none"
        focusable={false}
        height={20}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          [
            {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            {
              "flex": 0,
              "height": 20,
              "width": 20,
            },
          ]
        }
        vbHeight={17}
        vbWidth={17}
        width={20}
      >
        <RNSVGGroup
          fill={null}
          propList={
            [
              "fill",
            ]
          }
        >
          <RNSVGPath
            d="M13.4583 8.5H3.54163M7.79163 12.75L3.54163 8.5L7.79163 4.25"
            fill={null}
            opacity={1}
            propList={
              [
                "fill",
                "stroke",
                "strokeWidth",
                "strokeLinecap",
                "strokeLinejoin",
              ]
            }
            stroke={
              {
                "payload": 4294967295,
                "type": 0,
              }
            }
            strokeLinecap={1}
            strokeLinejoin={1}
            strokeWidth={1.5}
          />
        </RNSVGGroup>
      </RNSVGSvgView>
    </View>
    <Text
      style={
        [
          {
            "fontFamily": "DMSans-Bold",
            "fontSize": 15,
            "letterSpacing": 0,
            "lineHeight": 24,
            "marginBottom": -2.2349999999999994,
            "marginTop": -2.2349999999999994,
          },
          {
            "flex": 1,
            "textAlign": "center",
          },
          {
            "color": "#21232c",
          },
        ]
      }
    >
      Enhanced Document Verification
    </Text>
    <View
      style={
        {
          "width": 40,
        }
      }
    />
  </View>
</View>
`;
